Fixes dividers between the different games should be left aligned with the containing text

--- a/src/components/SideBar/Event.less
+++ b/src/components/SideBar/Event.less
@@ -6,7 +6,8 @@
 .event-node-container {
   color: #ffffff;
   //margin-left: 30px;
-  padding: 10px 5px 10px 30px;
+  margin-left:30px;
+  padding: 10px 5px 10px 0;
   border-bottom: solid 1px #084272;
 }
 
